public/styles/20230602-global.css
/* ... */
body {
  font-family: var(--serif);
  font-size: var(--font-s);
  line-height: 1.75rem;
  color: var(--color-text);
  background-color: var(--color-bg);
  padding: 0 var(--space-s);
  display: flex;
  flex-direction: column;
}

main {
  padding-bottom: var(--space-l);
  flex: 1 0 auto;
}

article {
  max-width: 600px;
}

/* Nav */

nav {
  z-index: 1;
  position: relative;
}

nav ul {
  list-style: none;
  padding: 0;
  display: flex;
  flex-wrap: wrap;
  column-gap: var(--space-l);
  margin-bottom: var(--space-m);
}

/* Accessibility */

.sr-only {
  position: absolute;
  width: 1px;
  height: 1px;
  padding: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(0, 0, 0, 0);
  white-space: nowrap;
  border-width: 0;
}

.skip-to-content {
  z-index: 2;
  position: absolute;
  transform: translateY(-280%);
  transition: transform 0.3s;
  background-color: var(--color-bg);
  padding: 0 0.5em;
}

.skip-to-content:focus {
  transform: translateY(20%);
}

/*--------------------------------------------------------*/
/*                   Shared components                    */
/*--------------------------------------------------------*/

.intro {
  max-width: 600px;
  margin-bottom: var(--space-4xl);
}

/* Images */

img {
  border-radius: var(--space-2xs);
}

figcaption {
  margin-top: var(--space-xs);
  font-style: italic;
  /* below similar to .label */
  font-size: var(--font-xs);
  line-height: 1.3rem;
}

/* Typography */

h1,
h2,
h3,
.h1,
.h2,
.h3 {
  font-family: var(--sans-serif);
  font-weight: bold;
  text-transform: capitalize;
}
h1,
.h1 {
  font-size: var(--font-xl);
  line-height: 2.9rem;
}
h2,
.h2 {
  font-size: var(--font-l);
  line-height: 2.3rem;
  margin: 3rem 0 1rem 0;
}
h3,
.h3 {
  font-size: var(--font-m);
  line-height: 1.8rem;
  margin: 2rem 0 1rem 0;
}

p,
ul,
ol {
  margin: 1rem 0;
}

li {
  margin: 0.4rem 0;
}

.emphasis {
  font-family: var(--sans-serif);
  font-weight: normal;
  font-size: var(--font-l);
  line-height: 2.5rem;
}

.label {
  font-family: var(--sans-serif);
  text-transform: uppercase;
  font-weight: bold;
  font-size: small;
  line-height: 1.3rem;
  letter-spacing: 0.1em;
  color: var(--color-subtle);
}

blockquote {
  border-left: solid 1px;
  padding-left: 1.5rem;
  margin: 2rem 0 2rem 2rem;
  color: var(--color-subtle);
}

pre {
  color: var(--color-subtle);
  overflow: auto;
}

code,
kbd {
  font-size: smaller;
}

hr {
  border: none;
  margin: 3rem 0;
  display: flex;
  justify-content: center;
  font-family: var(--sans-serif);
  font-size: 1.5rem;
}
hr::before {
  content: "*\00a0*\00a0*";
}

/* ~striked-through text~ styles and accessibility */

del {
  text-decoration-thickness: 1.5px;
}
del::before,
del::after {
  clip-path: inset(100%);
  clip: rect(1px, 1px, 1px, 1px);
  height: 1px;
  overflow: hidden;
  position: absolute;
  white-space: nowrap;
  width: 1px;
}
del::before {
  content: " [start of strikethrough text] ";
}
del::after {
  content: " [end of strikethrough text] ";
}

/* Lists */

.nobullet,
.nobullet > li {
  padding: 0;
  list-style: none;
}

/* Details */

details summary {
  cursor: pointer;
}

/* Completed task */

.completed {
  text-decoration: line-through;
  color: var(--color-subtle);
}
.completed::after {
  content: "\00A0\2714";
}

/* Hyperlinks and buttons */
button {
  cursor: pointer;
  font: inherit;
  border: solid 1px;
  padding: 0.1rem 0.4rem;
  background: var(--color-bg);
  color: var(--color-text);
}
button:hover,
button:focus {
  animation: color-change 5s infinite;
}
button:focus {
  outline: 1px solid;
}

a {
  color: var(--color-text);
  text-underline-position: under;
  transition: color 0.25s ease-out;
}
a:hover {
  animation: color-change 5s infinite;
}
a:focus {
  animation: color-change 5s infinite;
  text-decoration: none;
  outline-offset: 0.1em;
  outline: 0.1em solid;
}

@keyframes color-change {
  5% {
    border-color: var(--red-dark);
    color: var(--red-dark);
  }
  15% {
    border-color: var(--yellow-dark);
    color: var(--yellow-dark);
  }
  30% {
    border-color: var(--green-dark);
    color: var(--green-dark);
  }
  50% {
    border-color: var(--blue-dark);
    color: var(--blue-dark);
  }
  70% {
    border-color: var(--purple-dark);
    color: var(--purple-dark);
  }
  90% {
    border-color: var(--pink-dark);
    color: var(--pink-dark);
  }
}

/* External links */

a[href*="//"]:not([href*="clarale.com"], #webring > a)::after
{
  content: url("/external-link.svg");
  display: inline-block;
  width: 1.2rem;
  transform: translate(0.4rem, -10%);
}

/* Forms */

input[type="checkbox"] {
  margin-right: 0.25rem;
}

/* Footnotes */

.footnotes {
  margin-top: var(--space-7xl);
  font-family: var(--sans-serif);
  font-size: small;
  line-height: 1.2rem;
  color: var(--color-subtle);
}
.footnotes * {
  color: var(--color-subtle);
}
.footnotes ol {
  padding: 0 0 0 1rem;
}
a[id*="user-content-fnref"] {
  color: var(--color-subtle);
  padding: 0 2px 0 3px;
}

/* Image composition (e.g. portfolio page) */

.image-comp {
  display: flex;
  flex-wrap: wrap;
  gap: var(--space-s);
}

/* Image tooltip */

.tooltip {
  position: relative;
  width: 100%;
}
.tooltip a img {
  z-index: 2;
  display: none;
  position: absolute;
  right: var(--space-xs);
  bottom: -10vh;
  width: 350px;
  max-width: 30vw;
  border: 2px solid var(--color-text);
}
.tooltip a:hover img,
.tooltip a:focus img {
  display: block;
}

/* Utils */

.hide {
  display: none;
}

.subtle {
  color: var(--color-subtle);
}

.subtitle {
  font-size: var(--font-m);
  line-height: 2rem;
  opacity: var(--alt-text-opacity);
  margin: 0.5rem 0 2rem 0;
}

/* Footer */

footer {
  display: flex;
  justify-content: space-between;
  align-items: center;
  flex-shrink: 0;
  padding: var(--space-s) 0;
  font-size: var(--font-xs);
}
footer ul {
  display: flex;
  gap: var(--space-s);
  padding: 0;
  margin: 0;
}
footer * {
  color: var(--color-subtle);
}
/* ... */

